API and JWT added.

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MSSQLDbContext": "Data Source=(localdb)\\MSSQLLocalDB;Trusted_Connection=True;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +11,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "TokenOptions": {
+    "Audience": "group@group.com",
+    "Issuer": "group@group.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "ultrasecretkeyultraSecretkey"
+  }
 }
